Try again for TARGETARCH

--- a/.github/workflows/podman-build.yaml
+++ b/.github/workflows/podman-build.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           image: ${{ env.IMAGE_NAME }}
           tags: latest ${{ github.sha }}
-          platforms: "amd64, arm64"
+          platforms: linux/amd64, linux/arm64"
           build-args: |
             FEDORA_VERSION=${{ env.FEDORA_VERSION }}
             BUILD_DATE=${{ github.event.head_commit.timestamp }}
