--- a/.github/workflows/podman-build.yaml
+++ b/.github/workflows/podman-build.yaml
@@ -20,29 +20,15 @@ jobs:
     permissions:
       contents: read
       packages: write
-      attestations: write
-      id-token: write
 
     steps:
       - name: Clone the repository
         uses: actions/checkout@v4
 
-      - name: Set up QEMU for multi-arch
-        uses: docker/setup-qemu-action@v3
-
-      - name: Build the image 
-        id: build-image
-        uses: redhat-actions/buildah-build@v2
+      - name: Set up Buildah with QEMU
+        uses: redhat-actions/setup-buildah@v2
         with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: latest ${{ github.sha }}
-          platforms: linux/amd64, linux/arm64"
-          build-args: |
-            FEDORA_VERSION=${{ env.FEDORA_VERSION }}
-            BUILD_DATE=${{ github.event.head_commit.timestamp }}
-            VCS_REF=${{ github.sha }}
-          containerfiles: |
-            ./Containerfile
+          install-qemu: true
 
       - name: Log in to the GitHub Container registry
         uses: redhat-actions/podman-login@v1
@@ -51,13 +37,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push to GitHub Container Repository
-        id: push-to-ghcr
-        uses: redhat-actions/push-to-registry@v2
+      - name: Build and push multi-arch image
+        uses: redhat-actions/buildah-build@v2
         with:
-          image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
-          registry: ${{ env.IMAGE_REGISTRY }}
-
-      - name: Print image url
-        run: echo "Image pushed to ${{ steps.build-push-image.outputs.registry-paths }}"
+          image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: latest
+          platforms: linux/amd64,linux/arm64
+          build-args: |
+            FEDORA_VERSION=${{ env.FEDORA_VERSION }}
+            BUILD_DATE=${{ github.event.head_commit.timestamp }}
+            VCS_REF=${{ github.sha }}
+          containerfiles: |
+            ./Containerfile
+          push: true
+          oci: true
