--- a/.github/workflows/podman-build.yaml
+++ b/.github/workflows/podman-build.yaml
@@ -22,6 +22,17 @@ jobs:
       packages: write
 
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'         
+
       - name: Clone the repository
         uses: actions/checkout@v4
 
