--- a/.github/workflows/podman-build.yaml
+++ b/.github/workflows/podman-build.yaml
@@ -22,16 +22,16 @@ jobs:
       packages: write
 
     steps:
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 512
-          swap-size-mb: 1024
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'true'         
+      # - name: Maximize build space
+      #   uses: easimon/maximize-build-space@master
+      #   with:
+      #     root-reserve-mb: 512
+      #     swap-size-mb: 1024
+      #     remove-dotnet: 'true'
+      #     remove-android: 'true'
+      #     remove-haskell: 'true'
+      #     remove-codeql: 'true'
+      #     remove-docker-images: 'true'         
 
       - name: Clone the repository
         uses: actions/checkout@v4
@@ -41,14 +41,7 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
 
-      - name: Log in to the GitHub Container registry
-        uses: redhat-actions/podman-login@v1
-        with:
-          registry: ${{ env.IMAGE_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push multi-arch image
+      - name: Build multi-arch image
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -60,5 +53,14 @@ jobs:
             VCS_REF=${{ github.sha }}
           containerfiles: |
             ./Containerfile
-          push: true
-          oci: true
+
+      - name: Push multi-arch image
+        uses: redhat-actions/buildah-push@v2
+        with:
+          image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: latest
+          platforms: linux/amd64,linux/arm64
+          registry: ${{ env.IMAGE_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
